{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 716,
  "lineage": "b76c0210-af2f-ce81-ca7d-0a1953207469",
  "resources": [
    {
      "module": "module.aws-rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:security-group/sg-01381949a21dd7d64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01381949a21dd7d64",
            "ingress": [
              {
                "cidr_blocks": [
                  "35.176.110.242/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e3b04e765d7006f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Infracloud-test-rds-security-group",
            "name_prefix": "",
            "owner_id": "972785599914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Infracloud-test-rds-security-group",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-rds-security-group",
              "Owner": "Ajay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-database-all-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.176.110.242/32",
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-855432350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01381949a21dd7d64",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-rds.aws_security_group.rds_security_group",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_nat_gateway.nat-gateway",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-database-from-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 5432,
            "id": "sgrule-2226867337",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01381949a21dd7d64",
            "self": false,
            "source_security_group_id": "sg-03e3b04e765d7006f",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-rds.aws_security_group.rds_security_group",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-outgoing-connections",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-835849246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01381949a21dd7d64",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-rds.aws_security_group.rds_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06672d07f62285d1d",
            "arn": "arn:aws:ec2:eu-west-2:972785599914:instance/i-0f3218d4b8aad3c15",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3218d4b8aad3c15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Infracloud-test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010c1749fba4cb608",
            "private_dns": "ip-10-0-100-177.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.177",
            "public_dns": "ec2-52-56-85-219.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.85.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0775d901bfffce09b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0107760145951bdb9",
            "tags": {
              "Name": "ec2-Infracloud-test-0",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "ec2-Infracloud-test-0",
              "Owner": "Ajay"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e3b04e765d7006f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "data.aws_availability_zones.available",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "tls_private_key.tls_key"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:security-group/sg-03e3b04e765d7006f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e3b04e765d7006f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "35.176.110.242/32",
                  "10.0.0.0/16",
                  "53.216.12.222/32",
                  "121.22.12.3/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Infracloud-test-ec2-securitygroup",
            "name_prefix": "",
            "owner_id": "972785599914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Infracloud-test-ec2-securitygroup",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-ec2-securitygroup",
              "Owner": "Ajay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-outgoing-connections",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-126609002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03e3b04e765d7006f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-connections",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.176.110.242/32",
              "10.0.0.0/16",
              "53.216.12.222/32",
              "121.22.12.3/32",
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2688354574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03e3b04e765d7006f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_nat_gateway.nat-gateway",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052582fb65e9d0689",
            "association_id": "eipassoc-04a08c7a2d6e01c59",
            "domain": "vpc",
            "id": "eipalloc-052582fb65e9d0689",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-090b075605cdc7f64",
            "private_dns": "ip-10-0-126-85.eu-west-2.compute.internal",
            "private_ip": "10.0.126.85",
            "public_dns": "ec2-35-176-110-242.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.110.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-internetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:internet-gateway/igw-037586e45d7e13b9b",
            "id": "igw-037586e45d7e13b9b",
            "owner_id": "972785599914",
            "tags": {
              "Name": "Infracloud-test-igw",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-igw",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052582fb65e9d0689",
            "connectivity_type": "public",
            "id": "nat-005b4a1e6ccbc919f",
            "network_interface_id": "eni-090b075605cdc7f64",
            "private_ip": "10.0.126.85",
            "public_ip": "35.176.110.242",
            "subnet_id": "subnet-0107760145951bdb9",
            "tags": {
              "Name": "Infracloud-test-nat-gw",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-nat-gw",
              "Owner": "Ajay"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:route-table/rtb-0e917357f853c8c4d",
            "id": "rtb-0e917357f853c8c4d",
            "owner_id": "972785599914",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-005b4a1e6ccbc919f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Infracloud-test-private-route",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-private-route",
              "Owner": "Ajay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_nat_gateway.nat-gateway",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:route-table/rtb-0e51bf58a02e91f19",
            "id": "rtb-0e51bf58a02e91f19",
            "owner_id": "972785599914",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037586e45d7e13b9b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Infracloud-test-public-route",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-public-route",
              "Owner": "Ajay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-internetgw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e22bfa1580e4de05",
            "route_table_id": "rtb-0e917357f853c8c4d",
            "subnet_id": "subnet-037ffc2c84fe2ccc3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_nat_gateway.nat-gateway",
            "module.vpc.aws_route_table.route-private",
            "module.vpc.aws_subnet.subnets-private",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50711a6a3b60f44",
            "route_table_id": "rtb-0e917357f853c8c4d",
            "subnet_id": "subnet-033fbf6cdc05dcd1c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_nat_gateway.nat-gateway",
            "module.vpc.aws_route_table.route-private",
            "module.vpc.aws_subnet.subnets-private",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad4347fe0c875f18",
            "route_table_id": "rtb-0e917357f853c8c4d",
            "subnet_id": "subnet-0af6657dc3ad5adbb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat-eip",
            "module.vpc.aws_nat_gateway.nat-gateway",
            "module.vpc.aws_route_table.route-private",
            "module.vpc.aws_subnet.subnets-private",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c76a79605c8937",
            "route_table_id": "rtb-0e51bf58a02e91f19",
            "subnet_id": "subnet-0107760145951bdb9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.vpc-internetgw",
            "module.vpc.aws_route_table.route-public",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e91c4986a0e43ff",
            "route_table_id": "rtb-0e51bf58a02e91f19",
            "subnet_id": "subnet-0d4501e1b1fb1fdde"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.vpc-internetgw",
            "module.vpc.aws_route_table.route-public",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07632ca0c5c2e86cb",
            "route_table_id": "rtb-0e51bf58a02e91f19",
            "subnet_id": "subnet-0ff331bad2932b62d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.vpc-internetgw",
            "module.vpc.aws_route_table.route-public",
            "module.vpc.aws_subnet.subnets-public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:subnet/subnet-037ffc2c84fe2ccc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037ffc2c84fe2ccc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972785599914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infracloud-test-private-subnet",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-private-subnet",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:subnet/subnet-033fbf6cdc05dcd1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033fbf6cdc05dcd1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972785599914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infracloud-test-private-subnet",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-private-subnet",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:subnet/subnet-0af6657dc3ad5adbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af6657dc3ad5adbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972785599914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infracloud-test-private-subnet",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-private-subnet",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:subnet/subnet-0107760145951bdb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0107760145951bdb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972785599914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infracloud-test-public-subnet",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-public-subnet",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:subnet/subnet-0d4501e1b1fb1fdde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4501e1b1fb1fdde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972785599914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infracloud-test-public-subnet",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-public-subnet",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:subnet/subnet-0ff331bad2932b62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff331bad2932b62d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972785599914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infracloud-test-public-subnet",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test-public-subnet",
              "Owner": "Ajay"
            },
            "vpc_id": "vpc-0a2fc0f78ac4c8d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972785599914:vpc/vpc-0a2fc0f78ac4c8d82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a467c6a38d02d89e",
            "default_route_table_id": "rtb-0e903d22e4d1c6886",
            "default_security_group_id": "sg-0e991c347fbe76c66",
            "dhcp_options_id": "dopt-0ada5363f41ca097b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2fc0f78ac4c8d82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e903d22e4d1c6886",
            "owner_id": "972785599914",
            "tags": {
              "Name": "Infracloud-test",
              "Owner": "Ajay"
            },
            "tags_all": {
              "Name": "Infracloud-test",
              "Owner": "Ajay"
            }
          }
        }
      ]
    }
  ]
}